@@ -210,12 +210,11 @@ class AddCardsDlg(QtGui.QDialog, Ui_AddCardsDlg, AddEditCards, AddCardsDialog):
             self.restoreGeometry(state)
 
     def keyPressEvent(self, event):
-        # Note: for the following to work reliably, there should be no
-        # shortcuts defined in the ui file.
         if self.yet_to_learn_button.isEnabled() and event.modifiers() in \
             [QtCore.Qt.ControlModifier, QtCore.Qt.AltModifier]:
             if event.key() in [QtCore.Qt.Key_Enter, QtCore.Qt.Key_Return,
                 QtCore.Qt.Key_Y, QtCore.Qt.Key_0, QtCore.Qt.Key_1]:
+                # Qt bug: works for Enter, Return, but not 0 or 1.
                 self.create_new_cards(-1)
             elif event.key() == QtCore.Qt.Key_2:
                 self.create_new_cards(2)
